[DEPLOY] v1.0.0 (#99)
* refactor: 간편 비밀번호 변경 시 이메일 전송 오류 해결

* feat: 신분증 ocr 기능 구현

* feat: 가맹점주 이메일 인증 기능 구현

* refactor: VoucherOwnerShip 응답 DTO 수정

* feat: 가맹점주 회원가입 기능 구현

* feat: 가맹점주 회원가입 기능 구현

* refactor: VoucherOwnership Dto 수정

* refactor : ErrorStatus 각 도메인별 에러처리 추가

* refactor : StoreCategory Enum 처리에 따른 전체 로직 리팩토링

* refactor : StoreCategory  엔터티, 파생 클래스들 삭제

* refactor : 바우처 필드명 수정에 따른 전체 로직 리팩토링

* refactor : 계좌번호 필드 추가

* refactor : 잔액 응답 DTO에 @Builder 추가

* refactor : 바우처 수량에 따른 구매 가능여부 검증로직 추가

* refactor: Voucher 응답 DTO 수정 및 예외처리

* refactor : 커스텀에러 넘버링 통일

* refactor: 가맹점주 회원가입 기능 구현 로직 수정(kakao api 호출 로직 제거)

* refactor: 유저 ocr 코드 삭제

* feat: 충돌 해결 및 가맹점주 로그인 기능 구현

* feat: 가맹점주 정보 조회, 비밀번호 찾기/변경, 간편 비밀번호 변경, 이메일 변경 기능 구현

* feat: S3 관련 초기 설정

* feat: 사업자등록증 ocr 기능 구현

* feat: 사업자등록증 및 신분증 OCR 기능 구현

* refactor: 가맹점주 회원가입 로직 변경

* feat: S3에 업로드된 이미지와 바우처 도메인 연동

* refactor: 바우처 응답 DTO에 imageUrl 필드 추가

* chore: AWS S3 관련 의존성 추가

* feat: 이미지 조회를 위한 프록시 API 구현

* feat: VoucherImageRepository 추가

* refactor: VoucherSearchRequest DTO의 category 타입을 enum으로 변경

* fix: CORS 설정 오류 해결 및 SecurityConfig 순환참조 에러 해결

* security: ocr 전체 결과 로그 출력 삭제

* fix: cors error

* refactor: 바우처 정렬 기준 변경

* refactor: VoucherOwnership 응답 V2로 리팩터링

* ✨ Feat/#23 kakao map 주변 가맹점 조회 API 구현 (#29)

* :fire: delete: 불필요 코드 제거

* chore: 충돌 해결

* :sparkles: feat: Region,StoreCategory 추가

* :sparkles: chore: 오탈자 수정

* feat: 카카오 맵 a내가 소유한 바우처의 사용처 조회 API 추가

* :recycle: refactor: category -> storeCategory

* :recycle: refactor: auto-sql: none

* :recycle: refactor: 충ì잔ìì¶충돌 별합

* :fire: delete: 불필요 sql 파일 삭제

* :sparkles: feat: dummy data 추가

* chore : ApiResponse 오타 수정

* :recycle: rename: KakaoMapSearchResponse 이름 변경 (dto 이름 변경)

* :sparkles: feat: Store 컨트롤러 @Operation 추가

* :sparkles: feat: StoreCategory 한글 이름 필드 추가

* :recycle: refactor: 유효성 검증 로직 추가 (위도, 경도, 반경,카테고리)

* :recycle: refactor: 상점 조회 결과에 상점 카테고리 값도 추가

* :sparkles: feat: 위도 경도 반경 에러 코드 추가

* ♻️  Refactor/#34 Update