@@ -1,9 +1,10 @@
 package com.example.Tokkit_server.global.config;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
@@ -13,40 +14,40 @@ import io.swagger.v3.oas.models.servers.Server;
 
 @Configuration
 public class SwaggerConfig {
-    
+
     @Bean
     public OpenAPI openAPI() {
-        // 액세스 토큰 인증 방식 정의
+        // 액세스 토큰 방식
         SecurityScheme accessTokenAuth = new SecurityScheme()
-            .type(SecurityScheme.Type.HTTP)
-            .scheme("bearer")
-            .bearerFormat("JWT")
-            .in(SecurityScheme.In.HEADER)
-            .name("Authorization");
-        
-        // 리프레시 토큰 인증 방식 정의
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER)
+                .name("Authorization");
+
+        // 리프레시 토큰 방식
         SecurityScheme refreshTokenAuth = new SecurityScheme()
-            .type(SecurityScheme.Type.APIKEY)
-            .in(SecurityScheme.In.COOKIE)
-            .name("refreshToken");
-        
+                .type(SecurityScheme.Type.APIKEY)
+                .in(SecurityScheme.In.COOKIE)
+                .name("refreshToken");
+
         SecurityRequirement securityRequirement = new SecurityRequirement()
-            .addList("accessTokenAuth")
-            .addList("refreshTokenAuth");
-        
-        // HTTPS 서버 설정 추가
-        Server httpsServer = new Server();
-        httpsServer.setUrl("https://xxxxxxxx");
-        
+                .addList("accessTokenAuth")
+                .addList("refreshTokenAuth");
+
+        // 서버 URL에 /api 추가
+        Server localServer = new Server();
+        localServer.setUrl("http://localhost:8080");
+
         return new OpenAPI()
-            .components(new Components()
-                .addSecuritySchemes("accessTokenAuth", accessTokenAuth)
-                .addSecuritySchemes("refreshTokenAuth", refreshTokenAuth))
-            .security(Arrays.asList(securityRequirement))
-            .info(new Info()
-                .title("토낏(TOKIIT) api 명세서")
-                .description("TOKKIT api 명세서입니다.")
-                .version("1.0.0"))
-            .servers(Arrays.asList(httpsServer));  // 서버 URL 추가
+                .components(new Components()
+                        .addSecuritySchemes("accessTokenAuth", accessTokenAuth)
+                        .addSecuritySchemes("refreshTokenAuth", refreshTokenAuth))
+                .security(List.of(securityRequirement))
+                .info(new Info()
+                        .title("토킷(TOKKIT) API 명세서")
+                        .description("토킷(TOKKIT) API 명세서입니다.")
+                        .version("1.0.0"))
+                .servers(List.of(localServer));
     }
 }
